@@ -1,3 +1,7 @@
+2009-04-03  Ingo Feinerer  <feinerer@logic.at>
+
+	* R/termdocmatrix.R: Further work on new TermDocumentMatrix.
+
 2009-03-28  Ingo Feinerer  <feinerer@logic.at>
 
 	* inst/doc/extensions.Rnw: Finished vignette.
